<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main_menu"
    tools:context=".ui.menu.MenuFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="119dp"
        android:src="@drawable/icon_character_main_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/btnSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:src="@drawable/background_button_1"
        app:layout_constraintBottom_toTopOf="@+id/btnStatistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dscoptic"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/btnSettings"
        app:layout_constraintEnd_toEndOf="@+id/btnSettings"
        app:layout_constraintStart_toStartOf="@+id/btnSettings"
        app:layout_constraintTop_toTopOf="@+id/btnSettings" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dscoptic"
        android:text="@string/play"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="@+id/btnPlay"
        app:layout_constraintStart_toStartOf="@+id/btnPlay"
        app:layout_constraintTop_toTopOf="@+id/btnPlay" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dscoptic"
        android:text="@string/statistics_"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:translationZ="1dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnStatistics"
        app:layout_constraintEnd_toEndOf="@+id/btnSettings"
        app:layout_constraintStart_toStartOf="@+id/btnStatistics"
        app:layout_constraintTop_toTopOf="@+id/btnStatistics" />

    <ImageView
        android:id="@+id/btnStatistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background_button_1"
        app:layout_constraintBottom_toTopOf="@+id/btnPlay"
        app:layout_constraintEnd_toEndOf="@+id/btnSettings"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnSettings"
        app:layout_constraintTop_toBottomOf="@+id/btnSettings" />

    <ImageView
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:src="@drawable/background_button_2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnStatistics"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btnStatistics"
        app:layout_constraintTop_toBottomOf="@+id/btnStatistics" />
</androidx.constraintlayout.widget.ConstraintLayout>